# data-shield-ai

./: .datashield.example.json  .dockerignore  .gitignore  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.ru.md  README.zh-CN.md  SECURITY.md  SKILL.md  action.yml  install.sh  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  release.yml
datashield/: __init__.py  __main__.py  api.py  batch.py  cli.py  compliance.py  config.py  engine.py  formats.py  masking.py  normalize.py  presets.py  strategies.py  streaming.py  structured.py  taxonomy.py  validators.py  validators_intl.py  validators_world.py
datashield/data/: __init__.py  names.py
datashield/detectors/: __init__.py  addresses.py  base.py  extra.py  gliner_plugin.py  intl_ids.py  ml_plugin.py  names.py  network.py  regex_intl.py  registry.py  ru.py  secrets.py  world_ids.py
datashield/integrations/: __init__.py  http_server.py  logging_filter.py  mcp_server.py
docs/: comparison.md  cookbook.md  index.md
docs/adr/: 0001-zero-dependencies.md  0002-confidence-and-keyword-gating.md  0003-one-way-redaction-default.md
docs/superpowers/specs/: 2026-06-13-data-shield-ai-design.md
examples/: sample_input.txt
tests/: test_addresses.py  test_adversarial_regression.py  test_batch.py  test_batch_hardening.py  test_cli.py  test_cli_advanced.py  test_cli_check.py  test_cli_robustness.py  test_cli_strategies.py  test_cli_stream_batch.py  test_cli_types.py  test_compliance.py  test_compliance_integration.py  test_config_advanced.py  test_config_robustness.py  test_config_strategy.py  test_config_toml_preset.py  test_corpus_consistency.py  test_detectors.py  test_edge_cases.py  test_engine.py  test_eval_harness.py  test_eval_metrics.py  test_extra_ids.py  test_formats.py  test_fp_benchmark.py  test_generative.py  test_generative_extended.py  test_http_server.py  test_input_limits.py  test_integration_corpus.py  test_integration_packaging.py  test_intl_ids_anglo.py  test_intl_ids_asia.py  test_intl_ids_eu.py  test_logging_filter.py  test_masking.py  test_mcp_server.py  test_metrics_per_category.py  test_names.py  (+35 more)
tools/: benchmark.py
tools/eval/: build_corpus.py  corpus.jsonl  evaluate.py
