[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-shield-ai"
version = "1.0.0"
description = "Локальная приватная прослойка: маскирует конфиденциальные данные до отправки во внешний ИИ"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Саша", email = "good177yy@mail.ru" }]
keywords = ["privacy", "pii", "redaction", "anonymization", "llm", "security"]
dependencies = []

[project.optional-dependencies]
# Гибридный режим: распознавание свободных имён/адресов.
ml = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2", "spacy>=3.4"]

[project.scripts]
datashield = "datashield.cli:main"

[project.urls]
Homepage = "https://github.com/meloch287/data-shield-ai"

[tool.setuptools]
packages = ["datashield", "datashield.detectors"]
