[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-shield-ai"
version = "1.4.0"
description = "Локальная приватная прослойка: маскирует конфиденциальные данные до отправки во внешний ИИ"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Саша", email = "good177yy@mail.ru" }]
keywords = ["privacy", "pii", "redaction", "anonymization", "llm", "security"]
dependencies = []

[project.optional-dependencies]
# Гибридный режим: распознавание свободных имён/адресов через Presidio.
ml = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2", "spacy>=3.4"]
# Лёгкая альтернатива на GLiNER (ONNX-ускорение на CPU).
gliner = ["gliner>=0.2", "onnxruntime>=1.16"]
# Инструменты разработки (на zero-dependency рантайма не влияют).
dev = ["ruff>=0.5", "mypy>=1.8", "coverage>=7.0"]

[project.scripts]
datashield = "datashield.cli:main"

[project.urls]
Homepage = "https://github.com/meloch287/data-shield-ai"

[tool.setuptools]
packages = ["datashield", "datashield.detectors", "datashield.data"]

[tool.setuptools.package-data]
datashield = ["py.typed"]

[tool.ruff]
line-length = 90
target-version = "py39"

[tool.ruff.lint]
# UP (pyupgrade) намеренно выключен: держим typing.List/Optional для читаемой
# совместимости с 3.9, хотя модули и используют from __future__ import annotations.
select = ["E", "F", "W", "I", "B", "C4"]
ignore = ["E501"]  # длину строк держим стилем, не падаем на ней

[tool.mypy]
# Таргет анализа 3.10 (mypy 2.x не поддерживает 3.9); рантайм пакета — 3.9+.
python_version = "3.10"
ignore_missing_imports = true
warn_redundant_casts = true
no_implicit_optional = true
files = ["datashield"]

[tool.coverage.run]
source = ["datashield"]
omit = ["datashield/detectors/ml_plugin.py", "datashield/detectors/gliner_plugin.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:", "raise NotImplementedError"]
